# fastrank

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt  smoke_test.sh  test_with_example_data.py  travis-deprec.yml  trec_news.sh
.github/: dependabot.yml
.github/workflows/: CI.yml  main.yml  python-package.yml  win64.yml
cfastrank/: Cargo.toml  README.md  build.rs  package.sh  requirements.txt
cfastrank/src/: lib.rs  util.rs
docs/: index.md
examples/: FastRankDemo.ipynb  full_featured.svm  msn30k.py  newsir18-entity.qrel  trec_news_2018.features.json  trec_news_2018.test  trec_news_2018.train
fastrank/: Cargo.toml  __init__.py  clib.py  eval.py  models.py  serde_err.json  training.py
fastrank/src/: coordinate_ascent.rs  dataset.rs  dense_dataset.rs  evaluators.rs  instance.rs  io_helper.rs  json_api.rs  lib.rs  libsvm.rs  model.rs  normalizers.rs  qrel.rs  random_forest.rs  randutil.rs  sampling.rs
metric_tests/: .gitignore  abc.qrel  cde.qrel  gen_trecrun.py
pyfastrank/: .pypirc  package.sh  requirements.txt  setup.py
pyfastrank/fastrank/: __init__.py  clib.py  training.py
pyfastrank/source/: clib.rst  conf.py  index.rst
pyfastrank/tests/: smoke_test.py
scripts/: best_feature.sh  deploy.sh  ent_news_cv.sh  osx_deploy.sh  smoke_test.sh  trec_news.sh  trec_news_cv.sh  trec_news_rf.sh
src/: cart.rs  coordinate_ascent.rs  core.rs  dataset.rs  dense_dataset.rs  evaluators.rs  ffi.rs  heap.rs  instance.rs  io_helper.rs  json_api.rs  lib.rs  libsvm.rs  model.rs  normalizers.rs  qrel.rs  random_forest.rs  randutil.rs  sampling.rs  stats.rs
tests/: __init__.py  test_errors.py  test_eval.py  test_numpy_types.py  test_ranker_api.py  test_staged_models.py  test_with_example_data.py
