[package]
name = "fastrank"
version = "0.6.0"
authors = ["John Foley <jjfoley@smith.edu>"]
edition = "2018"
readme = "README.md"
description = "FastRank Learning to Rank Library written in Rust."
homepage = "https://github.com/jjfiv/fastrank"
license = "MIT"
publish = false

[lib]
name = "fastrank"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
oorandom = "=11.1.0"
bzip2 = "0.3"
flate2 = "1.0"
zstd = "0.4"
rayon = "1.2"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_derive = "1"
ordered-float = { version = "2.0", features = ["serde"] }
fast-float = "0.2"

[package.metadata.maturin]
requires-dist = ["attrs", "cffi", "numpy"]
classifier = [
  "Programming Language :: Python :: 3.6",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
