[package]
name = "fastrank"
version = "0.9.0-dev"
authors = ["John Foley <git@jjfoley.me>"]
edition = "2021"
readme = "README.md"
description = "FastRank Learning to Rank Library written in Rust."
homepage = "https://github.com/jjfiv/fastrank"
license = "MIT"
publish = false

[lib]
name = "fastrank"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.140"
# oorandom is pinned to prevent seeds from changing across versions of fastrank
oorandom = "=11.1.0"
bzip2 = "0.4.4"
flate2 = "1.0.25"
zstd = "0.12.3"
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["rc"] }
serde_json = "1.0.94"
serde_derive = "1.0.158"
ordered-float = { version = "3.6.0", features = ["serde"] }
fast-float = "0.2.0"
