[package]
name = "cfastrank"
version = "0.4.0"
authors = ["John Foley <jjfoley@smith.edu>"]
edition = "2018"
readme = "README.md"
description = "C API to FastRank Learning to Rank Library written in Rust."
homepage = "https://github.com/jjfiv/fastrank"
license = "MIT"
publish = false

[lib]
name = "cfastrank"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.60"
serde = "1"
serde_json = "1"
serde_derive = "1"

[dependencies.fastrank]
path = "../fastrank"

[build-dependencies]
cbindgen = "0.10"
