[package]
name = "fastrank"
version = "0.4.0-alpha"
authors = ["John Foley <jjfoley@smith.edu>"]
edition = "2018"
publish = false

[dependencies]
oorandom = "11.1.0"
bzip2 = "0.3"
flate2 = "1.0"
zstd = "0.4"
rayon = "=1.2.0"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_derive = "1.0.34"
ordered-float = { version = "1.0", features = ["serde"] }
